# NeMo-ASR

./: README.md  pyproject.toml  requirements.txt
nemo_asr/: __init__.py  transcribe.py
nemo_asr/utils/: resample.py  utils.py
