[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-asr"
dynamic = ["dependencies"]
description = "NeMo ASR - a simple Python interface for NVIDIA NeMo ASR models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
version = "0.0.1"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
